syntax = "proto3";

option csharp_namespace = "ContentService.Services";

service GrpcAuthService{
	rpc ValidateToken(AuthRequest) returns (AuthResponse);
}

message AuthRequest{
	string token = 1;
}

message AuthResponse{
	int32 userId = 1;
}